# EcoLearn

./: .gitignore  README-EcoLearn.txt  README.md  buildecolearn.sh
EcoSynth/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  FindOpenCL.cmake  FindZeroMQ.cmake  README-EcoLearn.txt  README.md  algorithms.aux  algorithms.tex  buildecolearn.sh  ecosynth changes kkapp  run_synthserver.sh
EcoSynth/clh/: CTestTestfile.cmake  Makefile  clh.cpp  clh.h  clhpp.h  climgformats.cpp  timer.cpp  timer.h
EcoSynth/colourmaps/: ._rainbow_bgyrm_35-85_c69_n256.csv  ._readme.txt  readme.txt
EcoSynth/common/: CMakeLists.txt  CTestTestfile.cmake  debug_string.h  debug_vector.h  exrrewrite.cpp  initialize.cpp  initialize.h  map.cpp  map.h  map_rgba.cpp  maputils.cpp  mathutils.h  progress.h  region.cpp  source2cpp.py  stats.h  str.h  terragen.cpp  timer.cpp  timer.h
EcoSynth/doc/html/: graph_legend.html  index.html
EcoSynth/ecodata/: ._modify_height_ratio.py  sonoma.db
EcoSynth/khronos_headers/: ._EGL
EcoSynth/khronos_headers/GLES2/: gl2ext.h
EcoSynth/khronos_headers/KD/: KHR_float64.h
EcoSynth/khronos_headers/VG/: vgplatform.h  vgu.h
EcoSynth/kmeans/: CMakeLists.txt  buildkmeans.sh  kmeans_old.h
EcoSynth/kmeans/src/: kmeans.cpp  kmeans.h  main.cpp
EcoSynth/undersample/: CMakeLists.txt  main.cpp
EcoSynth/viewer/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Makefile  MapFloat.h  MinimalPlant.h  clusters.cpp  clusters.h  cmake_install.cmake  convertpaintingdialog.cpp  convertpaintingdialog.h  convertpaintingdialog.ui  descriptor.cpp  descriptor.h  dice_roller.cpp  dice_roller.h  eco.cpp  eco.h  fill.cpp  fill.h  glheaders.h  glwidget.cpp  glwidget.h  grass.cpp  grass.h  gui_automoc.cpp  histcomp_window.cpp  histcomp_window.h  interp.cpp  interp.h  ipc.cpp  ipc.h  main.cpp  moc_glwidget.cpp  moc_palette.cpp  moc_terraintabs.cpp  model_importer.cpp  model_importer.h  moisture.cpp  moisture.h  (+43 more)
EcoSynth/viewer/shaders/: ._basic.frag  ._basic.vert  ._canopy.frag  ._canopy.vert  ._phong.frag  ._sun.frag  (+29 more)
UnderSim/clh/: CMakeLists.txt  cmake_install.cmake  texmark.cl  texmark.cpp
UnderSim/common/: CMakeLists.txt  Makefile  cmake_install.cmake  color2gray.cpp  constraint_interface.h  debug_list.h  debug_unordered_map.h  gdal2exr.cpp  heighttool.cpp  map.h  map2exr.cpp  map_rgba.cpp  map_rgba.h  maputils.h  mathutils.cpp  obj.cpp  obj.h  progress.cpp  region.h  serialize.h  source2cpp.cpp  source2cpp.h  stats.cpp  terragen.h  utsclassify.cpp
UnderSim/sim/: CMakeLists.txt  CTestTestfile.cmake  README  TerrainRender.pro  descriptor.cpp  descriptor.h  dice_roller.cpp  dice_roller.h  eco.cpp  eco.h  glheaders.h  glwidget.cpp  glwidget.h  grass.cpp  grass.h  gui_automoc.cpp  main.cpp  main_sunsim.cpp  moc_verticalscrollarea.cpp  moc_window.cpp  moisture.cpp  moisture.h  pft.cpp  pft.h  shaderProgram.cpp  shaderProgram.h  shape.cpp  shape.h  sim.cpp  sim.h  stroke.cpp  stroke.h  sun.cpp  sun.h  terrain.cpp  terrain.h  timer.cpp  timer.h  trenderer.cpp  trenderer.h  (+10 more)
cluster_distribs/: CMakeLists.txt
cluster_distribs/src/: AllClusterInfo.cpp  AllClusterInfo.h  CMakeCache.txt  CMakeLists.txt  ClusterAssign.cpp  ClusterAssign.h  ClusterData.cpp  ClusterData.h  ClusterDistribDerivator.cpp  ClusterDistribDerivator.h  ClusterMaps.cpp  ClusterMaps.h  ClusterMatrices.cpp  ClusterMatrices.h  HistogramDistrib.cpp  HistogramDistrib.h  HistogramMatrix.cpp  HistogramMatrix.h  JSONHandler.h  Makefile  MinimalPlant.cpp  MinimalPlant.h  PlantSpatialHashmap.cpp  PlantSpatialHashmap.h  UndergrowthRefiner.cpp  UndergrowthRefiner.h  UndergrowthSampler.cpp  UndergrowthSampler.h  cmake_install.cmake  common.cpp  common.h  dice.cpp  dice.h  distribution.cpp  distribution.h  generic_rng.cpp  generic_rng.h  main.cpp  main_basic_pdb.cpp  main_read.cpp  (+5 more)
data_preproc/: CMakeLists.txt
data_preproc/canopy_placement/: CMakeLists.txt  main.cpp
data_preproc/common_data/: allometryTable.csv  coldTolLow.csv  convert_numbering.py  create_specratio_csv.py  databaseSchema.odp  droughtTolLow.csv  growthMonthTable.csv  modelDetails.csv  modelMapping.csv  monthlies.csv  regen.sh  shadeTolLow.csv  sonoma.db  speciesTable (full-backup).csv  speciesTable(properbackup).csv  speciesTable.csv  subBiomeMapping (backup).csv  subBiomeMapping.csv  subBiomeMapping.csv_new  subBiomeTable.csv  subbiome1Species.db  subbiome_adaptvals.txt
data_preproc/extract_script/: .sonoma_extract.py.swn  base_biome.txt  base_biome_old(Before subbiomes).txt  base_clim.txt  base_species_params.txt  canopy_placement_mass.sh  count_pdbcontents.sh  create_circ_count_txts.sh  extract_data.py  extract_mass.sh  extract_sonomatests.sh  run_all_mass.sh  sonoma_extract.py  sunsim_canopy_mass.sh  test_canopy_placement.sh  test_extract.sh  test_simspec_gen.py  undergrowth_mass.sh
data_preproc/grass_sim/: CMakeLists.txt  grass_sim.cpp  grass_sim.h  main.cpp
data_preproc/pso/: pso.cpp  pso.h
data_preproc/slope_compute/: CMakeLists.txt  Makefile  comp_norms.frag  comp_norms.vert  compute_normals.cpp
data_preproc/species_assign/: CMakeLists.txt  main.cpp  main_single.cpp
data_preproc/sunlight_sim/: CMakeLists.txt  Makefile  cmake_install.cmake  count_pixels.cu  count_pixels.h  main.cpp  quad.frag  quad.vert  sunlight.frag  sunlight.vert  sunsim.cpp  sunsim.h  terrain.cpp  terrain.h
data_preproc/temp_compute/: CMakeLists.txt  main.cpp
data_preproc/undersim/: CMakeLists.txt  main.cpp
data_preproc/waterfill/: CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  moisture.cpp  moisture.h  waterfill.cpp  waterfill.h
gpusample/: CMakeLists.txt
gpusample/src/: cudatypes.h  gpusample.cu  gpusample.h  kmeans_assign.cu  kmeans_assign.h
grass_sim_standalone/: CMakeLists.txt  MapFloat.h  basic_types.h  data_importer.cpp  data_importer.h  grass_sim.cpp  grass_sim.h  main.cpp
tests/test_hashmap/: CMakeLists.txt
tests/validator/: CMakeLists.txt  main.cpp  rw_sampler.cpp  rw_sampler.h  validate_addremove.cpp  validate_canopytree_mod.cpp  validate_clusterfile.cpp  validate_commondata.cpp  validate_underdensity.cpp  validator.cpp  validator.h
(+104 files in other folders)
