cmake_minimum_required(VERSION 3.5)
project(data_preproc)

find_package(Boost COMPONENTS system filesystem REQUIRED)

#set(CMAKE_C_COMPILER /usr/bin/gcc-6)
#set(CMAKE_CXX_COMPILER /usr/bin/g++-6)

get_filename_component(PROJECT_BASEDIR ../EcoSynth/ ABSOLUTE)
get_filename_component(BASE_ALL ../ ABSOLUTE)
set(VIEWER_DIR ${PROJECT_BASEDIR}/viewer)
set(CANOPY_DIR ${BASE_ALL}/canopy_placement)
#set(SPECIES_DIR ${PROJECT_BASEDIR}/viewer/species_optim)
set(SPECIES_DIR ${BASE_ALL}/species_optim)
set(UNDERSIM_DIR ${BASE_ALL}/UnderSim)
set(IMPORTER_DIR ${BASE_ALL}/data_importer)
set(COMMON_DIR ${BASE_ALL}/common)
set(INCLUDE_DIRS ${VIEWER_DIR} ${CANOPY_DIR} ${SPECIES_DIR} ${IMPORTER_DIR} ${BASE_ALL})
set(COMMON_LINK_LIBRARIES sqlite3)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)

add_subdirectory(slope_compute)
add_subdirectory(sunlight_sim)
add_subdirectory(temp_compute)
add_subdirectory(waterfill)
add_subdirectory(species_assign)
add_subdirectory(canopy_placement)
#add_subdirectory(tests/sunlight_sim)
#add_subdirectory(tests/canopy_placement)
#add_subdirectory(tests/specassign)
#add_subdirectory(undersim)
